Fixed Department cards alignment for specific devices

--- a/src/css/AboutDept.css
+++ b/src/css/AboutDept.css
@@ -135,24 +135,23 @@
   }
 }
 
-@media (max-width: 600px) {
+/* Phones */
+@media (max-width: 767px) {
   .about__dept_flip-card {
-    width: 100%;
-    height: 470px;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    height: 550px;
   }
 }
 
-@media (max-width: 450px) {
+/* Tablets */
+@media (min-width: 768px) and (max-width: 991px) {
   .about__dept_flip-card {
-    width: 100%;
+    height: 600px;
+  }
+}
+
+/* Laptops */
+@media (min-width: 992px) and (max-width: 1199px) {
+  .about__dept_flip-card {
     height: 500px;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
-}
-
-@media (min-width: 992px) {
-}
-
-@media (min-width: 1200px) {
 }
